--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
 <body>
     <div class="container">
         <h1>Welcome to My Resume App</h1>
-        <button class="view-resume" onclick="window.location.href='/resume'">View Resume</button>
-        <button class="download-resume" onclick="window.location.href='/download-resume'">Download Resume</button>
+        <button class="view-resume" onclick="window.location.href='resume.html'">View Resume</button>
+        <button class="download-resume" onclick="window.location.href='resume.pdf'">Download Resume</button>        
     </div>
 </body>
 </html>
