--- a/public/resume.html
+++ b/public/resume.html
@@ -35,7 +35,7 @@
         <p><strong>Experience:</strong> DevOps Engineer | AWS Certified</p>
         <p><strong>Skills:</strong> Kubernetes, AWS, Terraform, CI/CD, GitHub Actions</p>
         <p><strong>Projects:</strong> EKS Deployments, Cloud Migrations, Security Hardening</p>
-        <a href="/index.html">Go Back</a>
+        <button class="Go Back" onclick="window.location.href='/index.html'">Go Back</button>      
     </div>
 </body>
 </html>
