--- a/public/resume.html
+++ b/public/resume.html
@@ -10,12 +10,15 @@
             margin: 20px;
             padding: 20px;
             background-color: #f4f4f4;
+            text-align: center;
         }
         .resume-container {
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+            text-align: left;
         }
         h1, h2 {
             color: #333;
@@ -23,7 +26,7 @@
         .contact-info, .skills, .experience, .education {
             margin-bottom: 20px;
         }
-        .download-btn {
+        .download-btn, .back-btn {
             display: inline-block;
             margin-top: 20px;
             padding: 10px 15px;
@@ -31,6 +34,7 @@
             color: white;
             border-radius: 5px;
             text-decoration: none;
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -94,7 +98,7 @@
             </ul>
         </div>
         
-        <a class="download-btn" href="resume.pdf" download>Download Resume (PDF)</a>
+        <a class="back-btn" href="index.html">Back to Home</a>
     </div>
 </body>
 </html>
